Nuevos cambios a la magia

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <h1>Mi Cafetería</h1>
+                <h1>Taza Hechizada</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="#">Inicio</a></li>
@@ -23,8 +23,8 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h2>El mejor café de la ciudad</h2>
-            <p>Disfruta de una experiencia única con nuestros granos seleccionados.</p>
+            <h2>Descubre la magia en cada taza"</h2>
+            <p>La magia comienza con los mejores granos del mundo.</p>
             <button>Ver Menú</button>
         </div>
     </section>
@@ -33,25 +33,35 @@
         <h2>Nuestros productos destacados</h2>
         <div class="product-list">
             <div class="product">
-                <img src="images/cafe1.jpg" alt="Café 1">
-                <h3>Café Americano</h3>
-                <p>Un clásico para comenzar el día.</p>
+                <img src="https://th.bing.com/th/id/OIP.6XVFEYJx3iYIXhjIPWLo3wHaJQ?w=700&h=875&rs=1&pid=ImgDetMain" alt="Café 1">
+                <h3>Pastel de la casa Huffepuff</h3>
+                <p>Si has demostrado lealtad y honestidad, tenemos algo que te encantará</p>
             </div>
             <div class="product">
-                <img src="images/cafe2.jpg" alt="Café 2">
-                <h3>Cappuccino</h3>
-                <p>Espresso con leche cremosa.</p>
+                <img src="https://i.pinimg.com/originals/23/25/39/2325398069245e365fa78c5e29dd3447.jpg" alt="Café 2">
+                <h3>Pastel de la casa Slytherin</h3>
+                <p>Solo para aquellos astutos y ambiciosos podrán pertenecer a está casa ¿Eres ideal?</p>
             </div>
             <div class="product">
-                <img src="images/cafe3.jpg" alt="Café 3">
-                <h3>Latte Macchiato</h3>
-                <p>Espresso con leche al vapor.</p>
+                <img src="https://th.bing.com/th/id/OIP.0wwOgswUaZLcca6fTWGTpwHaHY?w=184&h=183&c=7&r=0&o=5&pid=1.7" alt="Café 3">
+                <h3>Pastel de la casa Gryffindor</h3>
+                <p>Ideal para aquellos que han demostrado ser valientes, osados determinados, audaces, caballerosos, y educados</p>
+            </div>
+            <div class="product">
+                <img src="https://i.pinimg.com/236x/32/27/fd/3227fd37921d3c1816f9d30eb2cfe799.jpg" alt="Café 4">
+                <h3>Pastel de la casa Ravenclaw</h3>
+                <p>Si eres una persona inteligente, creativa, curiosa y siempre buscas una respuesta este pastel es para tí</p>
+            </div>
+            <div class="product">
+                <img src="https://th.bing.com/th/id/OIP.kr-a_nBB-0aRsmgeNqWq5wHaHu?w=1024&h=1068&rs=1&pid=ImgDetMaing" alt="Café 4">
+                <h3>Feliz cumpleaños Harry Potter</h3>
+                <p>¿Olvidaron tú cumpleaños? No es así, siempre serás especial para alguíen más</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2023 Mi Cafetería</p>
+        <p>&copy; 2023 Taza Hechizada</p>
     </footer>
 </body>
 </html>
