Ya casi terminamos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Cafetería</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Nosotros.html">
 </head>
 <body>
     <header>
@@ -30,6 +31,10 @@
             <button>Ver Menú</button>
         </div>
     </section>
+
+    <!--La canción-->
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2G5hAbyjLoY1wSQFbOy5PN?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <!--La canción-->
 
     <section class="featured-products">
         <h2>Para aquellos que nos acompañan en su cumpleaños ¡TENEMOS UNA SORPRESA ESPECIAL!</h2>
