--- a/Nosotros.html
+++ b/Nosotros.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi cafetería</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Nosotros.html">
 </head>
 <body>
     <header>
@@ -13,13 +14,18 @@
                 <h1>Taza Hechizada</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#"onclick="redirigir('index.html')">Inicio</a></li>
                 <li><a href="#">Menú</a></li>
-                <li><a href="#">Nosotros</a></li>
+                <li><a href="#contacto">Contacto</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
+
+<!--La canción-->
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2G5hAbyjLoY1wSQFbOy5PN?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<!--La canción-->
+
 
     <!--se abre sobre nosotros-->
     <section class="about-us">
@@ -134,5 +140,6 @@
         
     </footer>
 
+    <script src="main.js"></script>
 </body>
 </html>
