Los pocos cambios

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -114,6 +114,34 @@
     </div>
 </section>
 
+<!--Caracteristicas del lugar-->
+
+<!--Caracteristicas del lugar-->
+<section class="features">
+    <h2>Nuestras Características Mágicas</h2>
+    <div class="features-grid">
+        <div class="feature-item">
+            <img src="https://pm1.aminoapps.com/6291/a6c35675bfcbcad2ee66e1aafe223cb6918ecac9_hq.jpg" alt="Calidad mágica">
+            <h3>Calidad Mágica</h3>
+            <p>Seleccionamos los mejores ingredientes mágicos para garantizar una experiencia inolvidable.</p>
+        </div>
+        <div class="feature-item">
+            <img src="https://pm1.aminoapps.com/6291/6c82cbf2b4dfa1d8ead48ec7fb3cdf2674506705_hq.jpg" alt="Ambiente único">
+            <h3>Ambiente Único</h3>
+            <p>Un espacio inspirado en el mundo mágico que te transportará a otro lugar.</p>
+        </div>
+        <div class="feature-item">
+            <img src="https://pm1.aminoapps.com/6291/086c0616d78f1d22b33bcefbd9d6c7af1e95ed13_hq.jpg" alt="Atención personalizada">
+            <h3>Atención Personalizada</h3>
+            <p>Disfruta de un servicio personalizado que hará tu visita especial.</p>
+        </div>
+        <div class="feature-item">
+            <img src="https://pm1.aminoapps.com/6291/956ee0a3749c30edb8ee31217aa0b0ad0db52a33_hq.jpg" alt="Eventos exclusivos">
+            <h3>Eventos Exclusivos</h3>
+            <p>Participa en eventos únicos diseñados para la comunidad mágica.</p>
+        </div>
+    </div>
+</section>
 
 <!--Se cierra para imagenes con descripción de lugares importantes-->
 
